--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
       hibernate:
       # show_sql: true
         format_sql: true
+        use_sql_comments: true
+    database-platform: org.hibernate.dialect.H2Dialect
 
 logging.level:
   org.hibernate.SQL: debug
